[A] add google analysis

--- a/zh-cn/standards/index.html
+++ b/zh-cn/standards/index.html
@@ -1195,6 +1195,13 @@
         <p class="w3cIcon"><a href="http://validator.w3.org/check?uri=referer"><img src="../images/valid-xhtml10.gif"
             alt="Valid XHTML 1.0 Strict"></a></p>
       </div>
-    </div>
+		</div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117528009-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-117528009-1');
+    </script>
   </body>
 </html>
