--- a/zh-cn/kb/index.html
+++ b/zh-cn/kb/index.html
@@ -87,5 +87,12 @@
             alt="Valid XHTML 1.0 Strict"></a></p>
       </div>
     </div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117528009-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-117528009-1');
+    </script>
   </body>
 </html>
