[U] update favico path

--- a/zh-cn/kb/008.html
+++ b/zh-cn/kb/008.html
@@ -7,8 +7,8 @@
     <meta name="description" content="KB008: 包含块( Containing block ) ">
     <link rel="stylesheet" type="text/css" href="../css/common.css" media="all">
     <link rel="stylesheet" type="text/css" href="../css/article.css" media="all">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="w3h_container">
