--- a/zh-cn/kb/index.html
+++ b/zh-cn/kb/index.html
@@ -9,8 +9,8 @@
     <title>W3Help - 兼容性 - 知识库</title>
     <link rel="stylesheet" type="text/css" href="../css/common.css" media="all">
     <link rel="stylesheet" type="text/css" href="../css/compatibility_index.css" media="all">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="w3h_container">
