[A] add baidu analysis

--- a/zh-cn/kb/003/index.html
+++ b/zh-cn/kb/003/index.html
@@ -258,5 +258,14 @@
       gtag('js', new Date());
       gtag('config', 'UA-117528009-1');
     </script>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?acf593f2a5c691adeb90256067c5366f";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </body>
 </html>
