--- a/zh-cn/home/compatibility.html
+++ b/zh-cn/home/compatibility.html
@@ -84,5 +84,14 @@
             alt="Valid XHTML 1.0 Strict"></a></p>
       </div>
     </div>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?acf593f2a5c691adeb90256067c5366f";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </body>
 </html>
