[A] add baidu analysis

--- a/zh-cn/home/about.html
+++ b/zh-cn/home/about.html
@@ -93,7 +93,15 @@
         <p class="w3cIcon"><a href="http://validator.w3.org/check?uri=referer"><img src="../images/valid-xhtml10.gif"
             alt="Valid XHTML 1.0 Strict"></a></p>
       </div>
-
     </div>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?acf593f2a5c691adeb90256067c5366f";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </body>
 </html>
