--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
 <meta http-equiv="refresh" content="0; url=zh-cn/kb/index.html">
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?acf593f2a5c691adeb90256067c5366f";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+</script>
