[A] add google validate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta http-equiv="refresh" content="0; url=zh-cn/kb/index.html">
+<meta name="google-site-verification" content="zO5jV-O7GZVKqmmftHYLPAfg_7abTqfgjeMEHLQ2Oj8" />
 <script>
   var _hmt = _hmt || [];
   (function() {
