--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta http-equiv="refresh" content="0; url=kb/index.html">
-<meta name="google-site-verification" content="zO5jV-O7GZVKqmmftHYLPAfg_7abTqfgjeMEHLQ2Oj8" />
+<meta name="keywords" content="web标准,W3C标准,兼容性">
+<meta name="description"
+    content="系统的介绍某些知识点，帮助开发者正确理解该知识点的概念及与其他知识点的关联性，梳理知识体系。在这些知识点中，有些是经常被错误理解的，有些是经常被人忽视但很重要的，还有些虽然目前尚未形成'W3C
+    标准'，但已被广泛应用的技术。">
 <script>
   var _hmt = _hmt || [];
   (function() {
