--- a/zh-cn/causes/index-2.html
+++ b/zh-cn/causes/index-2.html
@@ -535,6 +535,7 @@
         <p class="w3cIcon"><a href="http://validator.w3.org/check?uri=referer"><img src="../images/valid-xhtml10.gif"
             alt="Valid XHTML 1.0 Strict"></a></p>
       </div>
-    </div>
+		</div>
+		<script src="../js/article_list.js"></script>
   </body>
 </html>
