--- a/zh-cn/standards/index.html
+++ b/zh-cn/standards/index.html
@@ -1710,6 +1710,7 @@
             </p>
         </div>
     </div>
+    <script src="../js/article_list.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117528009-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
